[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player/Sprite-0001.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Collision logic/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 8, 7.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 8, 8.5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )
hframes = 8

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -2, -1 )
frames = SubResource( 10 )
frame = 7
playing = true

[node name="Timer" type="Timer" parent="."]

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 5

[node name="Area2D2" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -2, 0.5 )
z_index = 1
shape = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0.5 )
shape = SubResource( 12 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
